   contributed by Brad Beveridge. This port relies on the version of the
   GNU MP library shipped with DarwinPorts.

 - ECL compiles and passes tests in OpenBSD/x86.

* Unicode support: (contributed by Brian Spilsbury)

 - Unicode strings (24-bits characters) are now supported as data structure,
   though they do not print and read properly.

* Visible changes:

 - Many functions have got now the prefix "ecl_" so as to avoid namespace
   collisions with C/C++ code.

 - Several functions with duplicate functionality (make_two_way_streams,
   make_string_output_stream_from_string, close_stream, etc) have been removed.

 - A new global variable EXT:*ACTION-ON-UNDEFINED-VARIABLE* controls whether
   the interpreter complains when you try to assign a value to a symbol that
   has not been defined as variable. An example

	> (SETQ S 1)	; No complain
	1
	> (SETQ EXT:*ACTION-ON-UNDEFINED-VARIABLE* 'ERROR)
	ERROR
	> (SETQ X 1)	; Ooops, X had not been defined before!
	Undefined variable referenced in interpreted code.
	Name: X
	>> :q
	> (DEFVAR X 1)
	X
	> (SETQ X 1)
	1

 - Adding a new method to a generic function does no longer result in a warning
   when the function belongs to a locked package.

 - Trying to change the function definition of a symbol in a locked package
   results in a correctable error.

 - All filesystem operations (opening files, checking directories, etc), now
   merge the pathname not only with *default-pathname-defaults*, but also with
   the output of SI:GETCWD. This way we ensure that all filenames are absolute
   pathnames. [1]

 - *LOAD-PATHNAME* contains the pathname as passed to LOAD, merged with
   *DEFAULT-PATHNAME-DEFAULTS* but not with SI:GETCWD. In other words, according
   to ANSI, it does not get the pathname as seen by the operating system.

 - C:BUILDER, C:BUILD-PROGRAM, etc, now accept :EPILOGUE-CODE to be a lisp
   form. This form is read and evaluated at run time after initializing the