@@ -27,7 +27,7 @@ cl_make_cfun(void *c_function, cl_object name, cl_object cblock, int narg)
 	cf->cfun.name = name;
 	cf->cfun.block = cblock;
 	cf->cfun.narg = narg;
-	if (narg < 0 || narg >= C_ARGUMENTS_LIMIT)
+	if (narg < 0 || narg > C_ARGUMENTS_LIMIT)
 	    FEprogram_error("cl_make_cfun: function requires too many arguments.",0);
 	return(cf);
 }
